--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RateMyCoop - UWaterloo SWE Internship Rankings</title>
-    <meta name="description" content="Rate and rank software engineering internships at University of Waterloo. Vote on your favorite companies and see real-time ELO-based rankings." />
-    <meta name="keywords" content="UWaterloo, software engineering, internships, rankings, ELO, co-op, Waterloo, tech companies" />
-    <meta name="author" content="RateMyCoop" />
+    <title>ratemycompany - UWaterloo SWE Internship Rankings</title>
+    <meta name="description" content="Rate and rank software engineering internships at University of Waterloo. Vote on your favorite companies and see real-time ELO-based rankings with ratemycompany." />
+    <meta name="keywords" content="UWaterloo, software engineering, internships, rankings, ELO, co-op, Waterloo, tech companies, ratemycompany" />
+    <meta name="author" content="ratemycompany" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://ratemycoop.com" />
+    <link rel="canonical" href="https://ratemycompany.com" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ratemycoop.com" />
-    <meta property="og:title" content="RateMyCoop - UWaterloo SWE Internship Rankings" />
-    <meta property="og:description" content="Rate and rank software engineering internships at University of Waterloo. Vote on your favorite companies and see real-time ELO-based rankings." />
-    <meta property="og:image" content="https://ratemycoop.com/og-image.png" />
-    <meta property="og:site_name" content="RateMyCoop" />
+    <meta property="og:url" content="https://ratemycompany.com" />
+    <meta property="og:title" content="ratemycompany - UWaterloo SWE Internship Rankings" />
+    <meta property="og:description" content="Rate and rank software engineering internships at University of Waterloo. Vote on your favorite companies and see real-time ELO-based rankings with ratemycompany." />
+    <meta property="og:image" content="https://ratemycompany.com/og-image.png" />
+    <meta property="og:site_name" content="ratemycompany" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://ratemycoop.com" />
-    <meta name="twitter:title" content="RateMyCoop - UWaterloo SWE Internship Rankings" />
-    <meta name="twitter:description" content="Rate and rank software engineering internships at University of Waterloo. Vote on your favorite companies and see real-time ELO-based rankings." />
-    <meta name="twitter:image" content="https://ratemycoop.com/og-image.png" />
+    <meta name="twitter:url" content="https://ratemycompany.com" />
+    <meta name="twitter:title" content="ratemycompany - UWaterloo SWE Internship Rankings" />
+    <meta name="twitter:description" content="Rate and rank software engineering internships at University of Waterloo. Vote on your favorite companies and see real-time ELO-based rankings with ratemycompany." />
+    <meta name="twitter:image" content="https://ratemycompany.com/og-image.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
