--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://ratemycompany.com" />
     <meta property="og:title" content="ratemycompany" />
     <meta property="og:description" content="Vote on heads up battles between top tech companies, with real-time elo based rankings." />
-    <meta property="og:image" content="https://ratemycompany.com/ratemycompany%20logo.png" />
+    <meta property="og:image" content="/ratemycompany%20logo.png" />
     <meta property="og:site_name" content="ratemycompany" />
 
     <!-- Twitter -->
@@ -23,7 +23,7 @@
     <meta name="twitter:url" content="https://ratemycompany.com" />
     <meta name="twitter:title" content="ratemycompany" />
     <meta name="twitter:description" content="Vote on heads up battles between top tech companies, with real-time elo based rankings." />
-    <meta name="twitter:image" content="https://ratemycompany.com/ratemycompany%20logo.png" />
+    <meta name="twitter:image" content="/ratemycompany%20logo.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
