--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ratemycompany.com" />
+    <meta property="og:url" content="https://ratemycompany.ca" />
     <meta property="og:title" content="ratemycompany" />
     <meta property="og:description" content="Vote on heads up battles between top tech companies, with real-time elo based rankings." />
-    <meta property="og:image" content="/ratemycompany%20logo.png" />
+    <meta property="og:image" content="https://ratemycompany.ca/ratemycompany%20logo.png" />
     <meta property="og:site_name" content="ratemycompany" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://ratemycompany.com" />
+    <meta name="twitter:url" content="https://ratemycompany.ca" />
     <meta name="twitter:title" content="ratemycompany" />
     <meta name="twitter:description" content="Vote on heads up battles between top tech companies, with real-time elo based rankings." />
-    <meta name="twitter:image" content="/ratemycompany%20logo.png" />
+    <meta name="twitter:image" content="https://ratemycompany.ca/ratemycompany%20logo.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
