--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ratemycompany</title>
-    <meta name="description" content="Vote on heads up battles between top tech companies, with real-time elo based rankings." />
+    <meta name="description" content="ratemycompany. Vote on heads up battles between top tech companies, with real-time elo based rankings." />
     <meta name="keywords" content="tech companies, rankings, elo, software engineering, internships, Apple, Google, Microsoft, Meta, Amazon, Netflix, Tesla, Uber, Stripe, Coinbase, OpenAI, Anthropic" />
     <meta name="author" content="Lance Yan" />
     <meta name="robots" content="index, follow" />
@@ -25,11 +25,7 @@
     <meta name="twitter:description" content="Vote on heads up battles between top tech companies, with real-time elo based rankings." />
     <meta name="twitter:image" content="https://ratemycompany.ca/ratemycompany%20logo.png" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-  </head>
+
 
   <body>
     <div id="root"></div>
