--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://ratemycompany.ca" />
     <meta property="og:title" content="ratemycompany" />
     <meta property="og:description" content="Vote on heads up battles between top tech companies, with real-time elo based rankings." />
-    <meta property="og:image" content="https://ratemycompany.ca/ratemycompany%20logo.png" />
+    <meta property="og:image" content="/ratemycompany.png" />
     <meta property="og:site_name" content="ratemycompany" />
 
     <!-- Twitter -->
@@ -23,8 +23,10 @@
     <meta name="twitter:url" content="https://ratemycompany.ca" />
     <meta name="twitter:title" content="ratemycompany" />
     <meta name="twitter:description" content="Vote on heads up battles between top tech companies, with real-time elo based rankings." />
-    <meta name="twitter:image" content="https://ratemycompany.ca/ratemycompany%20logo.png" />
-
+    <meta name="twitter:image" content="/ratemycompany.png" />
+    <link rel="icon" type="image/png" href="/ratemycompany.png" />
+    <link rel="icon" type="image/svg+xml" href="/ratemycompany.png" />
+    <link rel="apple-touch-icon" href="/ratemycompany.png" />
 
 
   <body>
